--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "eslint-config-next": "13.1.2",
     "framer-motion": "^8.4.7",
     "next": "13.1.2",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.1",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
     "typescript": "4.9.4"
