--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.2",
     "dayjs": "^1.11.7",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "framer-motion": "^8.4.7",
     "next": "13.1.2",
+    "nodemailer": "^6.9.1",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +34,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.7",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
